<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".TrainingActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/beginningTrainingTV"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/beginning_training"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="24sp" />

        <Button
            android:id="@+id/startTrainingBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/button_startExercises"
            android:text="@string/start_training"
            android:textSize="20sp"
             />

        <TextView
            android:id="@+id/nameExerciseTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="20dp"
            android:text="@string/name_exercise"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/descriptionExerciseTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:text="@string/description_exercise"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/timerTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:layout_marginVertical="20dp"
            android:text="@string/timer"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="22sp" />

        <Button
            android:id="@+id/nextExerciseBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/button_startExercises"
            android:text="@string/next_button"
            android:enabled="true"
            android:textSize="20sp" />

        <pl.droidsonroids.gif.GifImageView
            android:id="@+id/imageExerciseIV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginVertical="20dp"
            android:layout_marginHorizontal="20dp" />

    </LinearLayout>

</LinearLayout>