<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_background"
        app:titleTextColor="@color/white"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageIV"
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:scaleType="centerInside"
            android:src="@drawable/fitnes_trening" />

        <TextView
            android:id="@+id/sloganTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:text="@string/slogan"
            android:gravity="center"
            android:textColor="@color/black"
            android:textStyle="bold"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/exercisesTV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="10dp"
            android:layout_marginTop="20dp"
            android:hint="@string/hint_exercises"
            android:textSize="14sp"
            tools:ignore="SmallSp" />

        <EditText
            android:id="@+id/exercisesET"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_marginHorizontal="10dp"
            android:hint="@string/edit_text_exercises"
            android:textStyle="bold"
            android:textSize="22sp" />

        <Button
            android:id="@+id/startExercisesBTN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:layout_marginHorizontal="20dp"
            android:backgroundTint="@color/button_startExercises"
            android:text="@string/button_start_exercises"
            android:textSize="24sp"
            android:textStyle="bold" />



    </LinearLayout>

</LinearLayout>